Initial set of docs changes for improved attestation process

--- a/site/about/glossary/_attestation.qmd
+++ b/site/about/glossary/_attestation.qmd
@@ -1,17 +1,26 @@
 attestation 
-: A formal process where model owners certify key model information at a specific time. Reviewed by the second line of defense, typically a validator, attestation is part of your audit trail and confirms that governance, documentation, and control requirements are met.
+: A formal process where attestation participants certify key model information at a specific time. Attestation is part of your audit trail and confirms that governance, documentation, and control requirements are met.
 
 attestation instance
 : The invocation of the attestation process on the {{< var validmind.platform >}}. Created when the attestation is triggered by the schedule you set up, it includes a snapshot with model activity and artifacts, questionnaire responses and review status, forming a full record of the review and approval process. 
+
+attestation participant
+: A user assigned to one of three roles in the attestation workflow — submitter, reviewer, or approver. Submitters must be model stakeholders; reviewers and approvers can be assigned by stakeholder or role.
 
 attestation period  
 : The time window during which attestation is active, with fixed start and end dates. Each period creates an unchanging model snapshot. Periods are usually scheduled quarterly or annually and can align with regulatory or internal cycles.
 
 attestation questionnaire  
-: A structured form that model owners use to confirm model status, documentation and compliance. It supports formatted inputs like checkboxes and text fields, serving as both a compliance check and formal review record.
+: A structured form that submitters use to confirm model status, documentation and compliance. It supports formatted inputs like checkboxes and text fields, serving as both a compliance check and formal review record.
 
 execution schedule  
-: The mechanism, manual or automated, that starts the attestation process based on set periods. It creates attestation instances, triggers snapshots and begins the workflow for model owners and validators.
+: The mechanism, manual or automated, that starts the attestation process based on set periods. It creates attestation instances, triggers snapshots and begins the workflow for attestation participants.
+
+group
+: An organizational unit that associates models with specific teams or functions. When reviewers or approvers are assigned by role, they can only act on models within groups they belong to — resulting in one attestation submission per model owner per group.
+
+inventory scope
+: The filter conditions that define which models are included in an attestation. Scope can be set using rules based on model fields, stages, or custom attributes.
 
 snapshot  
 : A fixed capture of model data at a specific time. It includes optional custom fields and related artifacts and stays unchanged throughout the attestation, ensuring historical accuracy.
