--- a/site/guide/attestation/_configure-attestations.qmd
+++ b/site/guide/attestation/_configure-attestations.qmd
@@ -6,7 +6,7 @@
 
 ::: {.panel-tabset}
 
-### Add attestation periods
+### 1. Add attestation periods
 
 Attestation periods are typically scheduled quarterly or annually and should be configured to align with regulatory or internal review cycles: 
 
@@ -19,7 +19,7 @@ Attestation periods are typically scheduled quarterly or annually and should be 
 
 ___
 
-Attestation periods reflect the time zone of the user setting up attestation and they trigger in the time zone of the model owner.
+Attestation periods reflect the time zone of the user setting up attestation and they trigger in the time zone of the submitter.
 
 :::
 
@@ -31,11 +31,59 @@ c. Set the **[start date]{.smallcaps}** for the attestation period.
 
 d. Set the **[end date]{.smallcaps}** when the attestation period ends.
 
-e. Click **Add Period**.
+e. Optional: Toggle **[email reminders]{.smallcaps}** to send reminders to Submitters, Reviewers, and Approvers:
 
- When the attestation period begins, the system triggers the process automatically. Model owners are then notified via a banner on their dashboard prompting them to complete the attestation questionnaire.
+   - **[days before end]{.smallcaps}** — How many days before the end date to send the reminder.
+   - **[subject]{.smallcaps}** — The email subject line.
+   - **[body]{.smallcaps}** — The email body with dynamic variables.
 
-### Add attestation fields
+   Available template variables: `{{Recipient Name}}`, `{{Attestation Name}}`, `{{Reminder Reason}}`, `{{Start Date}}`, `{{End Date}}`, `{{Schedule Name}}`, `{{Status Text}}`.
+
+f. Click **Add Period**.
+
+When the attestation period begins, the system triggers the process automatically. Attestation participants are then notified via a banner on their dashboard prompting them to complete their attestation tasks.
+
+### 2. Assign attestation participants
+
+Assign users and roles responsible for this attestation. Each participant type has a specific responsibility in the attestation workflow:
+
+::: {.column-margin .callout}
+
+### Stakeholder versus role
+
+- **Submitter** — Must be a model stakeholder (assigned directly to a model)
+- **Reviewer/Approver** — Can be a model stakeholder (bottoms-up management) or a role (top-down management)
+
+___
+
+When reviewers or approvers are assigned by role, they can only act on models within groups they belong to — resulting in one attestation submission per model owner per group.
+:::
+
+a. Under Attestation Participants, select the **[submitter]{.smallcaps}** from the model stakeholders dropdown:
+
+   - Model Owner
+   - Model Developer
+   - Model Validator
+
+b. Select the **[reviewer]{.smallcaps}** from the model stakeholders or roles dropdown.
+
+c. Select the **[approver]{.smallcaps}** from the model stakeholders or roles dropdown.
+
+d. Click **Save**.
+
+### 3. Set inventory scope
+
+Define which models are included in the attestation process. By default, all models are included. Use filters to narrow the scope based on model fields, stages, or custom attributes.
+
+a. Under Inventory Scope, click **{{< fa plus >}} Add Rule** to add a filter condition.
+
+{{< include /guide/shared/_select-your-filters.qmd >}}
+
+b. Click **Save**.
+
+c. Optional: Click **See Models** to preview which models match your filter criteria.
+
+### 4. Add attestation fields
 
 By default, attestations include the model name. Add additional model inventory fields as needed:
 
@@ -46,7 +94,7 @@ a. Under Relevant Attestation Fields, drag model inventory fields between column
 
 b. Optional: Reorder the fields to change how they display in the attestation.
 
-### Edit questionnaire templates
+### 5. Edit questionnaire templates
 
 Attestation questionnaires should confirm that key controls, governance processes, and documentation requirements have been followed. 
 
@@ -73,7 +121,7 @@ a. Under Questionnaire Template, click the template area to edit. You can add ri
 
 b. After you complete your edits, click **Save**.
 
-The attestation questionnaire is now ready to be be used in future attestation instances, to be completed by model owners and reviewed and signed off by validators.
+The attestation questionnaire is now ready to be used in future attestation instances, to be completed by submitters, reviewed by reviewers, and signed off by approvers.
 
 :::
 
@@ -93,6 +141,24 @@ a. Set the **[start date]{.smallcaps}** for the attestation period.
 a. Set the **[end date]{.smallcaps}** when the attestation period ends.
 
 a. Click **Add Period**.
+
+#### Assign attestation participants
+
+a. Under Attestation Participants, select the **[submitter]{.smallcaps}** from the model stakeholders dropdown.
+
+a. Select the **[reviewer]{.smallcaps}** from the model stakeholders or roles dropdown.
+
+a. Select the **[approver]{.smallcaps}** from the model stakeholders or roles dropdown.
+
+a. Click **Save**.
+
+#### Set inventory scope
+
+a. Under Inventory Scope, click **{{< fa plus >}} Add Rule** to add a filter condition.
+
+a. Configure your filter rules and groups as needed.
+
+a. Click **Save**.
 
 #### Add attestation fields
 
