Style + instruction edits

--- a/site/guide/model-validation/view-filter-artifacts.qmd
+++ b/site/guide/model-validation/view-filter-artifacts.qmd
@@ -3,6 +3,8 @@ title: "View and filter artifacts"
 date: last-modified
 aliases: 
   - view-filter-model-findings.qmd
+includes:
+   artifacts: true
 ---
 
 Access a complete list of filterable artifacts logged across all your models in the {{< var validmind.platform >}}, or look at only artifacts linked to a specific model.
@@ -98,7 +100,7 @@ To narrow down artifacts, you can apply some filters:
 ::: {.callout-important collapse="true" appearance="minimal"}
 ### How do I create effective filters?
 
-{{< include /guide/shared/_select-your-filters.qmd >}}
+{{< include /guide/shared/_work-with-filters.qmd >}}
 :::
 :::
 
@@ -121,10 +123,10 @@ Changes are automatically saved to your account and do not affect other users.
 4. On the Select Your Filters dialog that opens, enter your filtering criteria.
 
 ::: {.callout-button .pl4 .nt4}
-::: {.callout-important collapse="true" appearance="minimal"}
+::: {.callout collapse="true" appearance="minimal"}
 ### How do I create effective filters?
 
-{{< include /guide/shared/_select-your-filters.qmd >}}
+{{< include /guide/shared/_work-with-filters.qmd >}}
 :::
 :::
 
