--- a/site/guide/model-inventory/working-with-model-inventory.qmd
+++ b/site/guide/model-inventory/working-with-model-inventory.qmd
@@ -15,6 +15,8 @@ listing:
       - customize-model-overview-page.qmd
 aliases:
   - /guide/working-with-model-inventory.html
+includes:
+   inventory: true
 ---
 
 Get started with the {{< var vm.product >}} inventory, which tracks comprehensive details for all your models throughout the model lifecycle. The model inventory is customizable and extensible, with a layout that can be configured to suit each user's needs.
@@ -40,10 +42,10 @@ Get started with the {{< var vm.product >}} inventory, which tracks comprehensiv
    - **{{< fa arrow-up-wide-short >}} Sort** — Reorder the list using different criteria in ascending or descending order.[^2]
 
 ::: {.callout-button .pl4 .nt4}
-::: {.callout-important collapse="true" appearance="minimal"}
+::: {.callout collapse="true" appearance="minimal"}
 ### How do I create effective filters?
 
-{{< include /guide/shared/_select-your-filters.qmd >}}
+{{< include /guide/shared/_work-with-filters.qmd >}}
 :::
 :::
 
