--- a/site/guide/shared/work-with-filters.qmd
+++ b/site/guide/shared/work-with-filters.qmd
@@ -1,10 +1,14 @@
 ---
-title: "Select your filters"
+title: "Work with filters"
 date: last-modified
+aliases: 
+  - select-your-filters.html
+includes:
+    both: true
 # NR This page exists only to provide a page we can link to from the filter modal in the product.
 # The page is intentionally not included in the sidebar because the docs for the filter modal are already embedded in the correct context:
-# - /guide/model-inventory/select-your-filters.qmd
+# - /guide/model-inventory/working-with-model-inventory.qmd
 # - /guide/model-validation/view-filter-artifacts.qmd
 ---
 
-{{< include /guide/shared/_select-your-filters.qmd >}}
+{{< include /guide/shared/_work-with-filters.qmd >}}
