AI governance local edits

--- a/site/about/use-cases/ai-governance.qmd
+++ b/site/about/use-cases/ai-governance.qmd
@@ -2,11 +2,12 @@
 title: "AI governance"
 date: last-modified
 listing:
-  id: ai-governance-next-steps
+  id: ai-governance
   type: grid
   max-description-length: 250
   grid-columns: 2
   sort: false
+  fields: [title, description]
   contents:
   - path: ./eu-ai-act.qmd
     title: "EU AI Act implementation guide"
@@ -64,7 +65,7 @@ AI governance programs produce documentation that demonstrates oversight:
 
 ```{mermaid}
 flowchart TB
-    center((AI Governance<br>Platform))
+    center((ValidMind<br>AI Governance<br>Platform))
     
     inv((Inventory))
     wf((Workflows))
@@ -81,36 +82,40 @@ flowchart TB
     center --- dep
     center --- life
     center --- lib
+
+    %% styling
+    classDef centerNode fill:#ffffff,stroke:#de257e,stroke-width:2px,color:#de257e,text-align:center
+    class center centerNode
 ```
 
 :::: {.columns}
 
 ::: {.column width="50%" .pr3}
 
-**Inventory**  
-Captures record types, defines custom fields, and identifies stakeholders.
+Inventory
+: Captures record types, defines custom fields, and identifies stakeholders.
 
-**Workflows**  
-Manages review cycles, approval paths, and assigned tasks.
+Workflows
+: Manages review cycles, approval paths, and assigned tasks.
 
-**Documents & Templates**  
-Provides standard forms, reports, and documentation templates.
+Documents & Templates
+: Provides standard forms, reports, and documentation templates.
 
-**Regulations & Policies**  
-Includes internal policies, external regulations, and compliance frameworks.
+Regulations & Policies
+: Includes internal policies, external regulations, and compliance frameworks.
 
 :::
 
 ::: {.column width="50%" .pl3}
 
-**Dependencies**  
-Maps data sources, LLM relationships, and interconnected systems.
+Dependencies
+: Maps data sources, LLM relationships, and interconnected systems.
 
-**Lifecycle**  
-Governs development, deployment, monitoring, and retirement stages.
+Lifecycle
+: Governs development, deployment, monitoring, and retirement stages.
 
-**Content Library**  
-Offers reusable components, a knowledge base, and additional resources.
+Content Library
+: Offers reusable components, a knowledge base, and additional resources.
 
 :::
 
@@ -146,7 +151,9 @@ Use **version-aware workflows** that differentiate between major and minor chang
 
 Explore our implementation guides for specific regulatory frameworks:
 
-:::{.use-case-listing}
+:::{#ai-governance}
 :::
 
 :::
+
+
