Updated task topics and edits

--- a/site/guide/attestation/_add-attestations.qmd
+++ b/site/guide/attestation/_add-attestations.qmd
@@ -1,16 +1,15 @@
-
 :::: {.content-visible unless-format="revealjs"}
 1. In the left sidebar, click **{{< fa gear >}} Settings**.
 
-1. Under Workspace, select **Attestations**.
+1. Under Workspace, select **Attestation Templates**.
 
-1. Click **{{< fa plus >}} Add Attestation**.
+1. Click **{{< fa plus >}} Add Attestation Template**.
 
-1. Enter a **[name]{.smallcaps}** and **[description]{.smallcaps}** for the attestation.
+1. Enter a **[name]{.smallcaps}** and **[description]{.smallcaps}** for the attestation template.
 
-1. Click **Add Attestation**.
+1. Click **Add Attestation Template**.
 
-1. [Configure the attestation](/guide/attestation/set-up-attestations.qmd#configure-attestations).
+1. Complete the required sections as described below.
 
 
 ::::
@@ -19,14 +18,14 @@
 :::: {.content-hidden unless-format="revealjs"}
 a. In the left sidebar, click **{{< fa gear >}} Settings**.
 
-a. Under Workspace, select **Attestations**.
+a. Under Workspace, select **Attestation Templates**.
 
-a. Click **{{< fa plus >}} Add Attestation**.
+a. Click **{{< fa plus >}} Add Attestation Template**.
 
-a. Enter a **[name]{.smallcaps}** and **[description]{.smallcaps}** for the attestation.
+a. Enter a **[name]{.smallcaps}** and **[description]{.smallcaps}** for the attestation template.
 
-a. Click **Add Attestation**.
+a. Click **Add Attestation Template**.
 
-a. Configure the attestation.
+a. Complete the required sections.
 
 ::::
