--- a/site/guide/attestation/_configure-attestations.qmd
+++ b/site/guide/attestation/_configure-attestations.qmd
@@ -1,8 +1,10 @@
 :::: {.content-visible unless-format="revealjs"}
 
+To edit an existing attestation template:
+
 1. In the left sidebar, click **{{< fa gear >}} Settings**.
 
-1. Under Workspace, select **Attestations** and then click an attestation to configure.
+1. Under Workspace, select **Attestation Templates** and then click an attestation template to edit.
 
 ::: {.panel-tabset}
 
