--- a/site/guide/attestation/working-with-attestations.qmd
+++ b/site/guide/attestation/working-with-attestations.qmd
@@ -8,9 +8,10 @@ listing:
     sort: false
     fields: [title, description]
     contents:
-      - set-up-attestations.qmd
-      - complete-attestation-questionnaires.qmd
+      - manage-attestations.qmd
+      - submit-attestation-questionnaires.qmd
       - review-attestation-questionnaires.qmd
+      - approve-attestation-questionnaires.qmd
 ---
 
 {{< include /guide/attestation/_attestations.qmd >}}
@@ -24,9 +25,9 @@ listing:
 - [x] If applicable, model artifacts have been documented.[^2]
 - [x] You are assigned a role with sufficient permissions to perform attestation tasks:[^3]
    - [{{< fa hand >}} Customer Admin]{.bubble} — Sets up attestations
-   - [Submitter]{.bubble} — Completes attestation questionnaires
+   - [Submitter]{.bubble} — Submits attestation questionnaires
    - [Reviewer]{.bubble} — Reviews attestation questionnaires
-   - [Approver]{.bubble} — Signs off on attestation questionnaires
+   - [Approver]{.bubble} — Approves attestation questionnaires
 
 :::
 
@@ -38,9 +39,7 @@ listing:
 
 Attestation on the {{< var validmind.platform >}} begins at the start of the attestation period after the process has been set up initially. The platform captures a snapshot of each model and its artifacts, preserving the state at that point in time. Changes made after the process starts do not affect the historical record.
 
-Attestation participants see a banner on their dashboard when an attestation requires action. The banner links directly to their active attestation tasks, also known as _attestation instances_:
-
-![Dashboard prompt for attestations](attestation-banner.png){width="80%" fig-alt="Attestation prompt with a link to the attestation labelled 'Open Attestations'" .screenshot}
+Attestation participants access their tasks via **{{< fa inbox >}} My Inbox** in the left sidebar. Tasks appear under the **Tasks** tab with the current attestation status, also known as _attestation instances_.
 
 Responsibilities for the attestation process are shared:
 
