--- a/site/about/use-cases/eu-ai-act.qmd
+++ b/site/about/use-cases/eu-ai-act.qmd
@@ -17,7 +17,7 @@ The documentation will:
 
 ## Overview
 
-The EU AI Act establishes requirements across six key areas for high-risk AI systems. This guide is organized around these requirements to help you set up {{< var vm.product >}} for compliance.
+The EU AI Act[^1] establishes requirements across six key areas for high-risk AI systems. This guide is organized around these requirements to help you set up {{< var vm.product >}} for compliance.
 
 ### Quick reference to risk classifications
 
@@ -31,185 +31,236 @@ The EU AI Act categorizes AI systems by risk level:
 
 - **Minimal risk** — AI systems with no specific requirements.
 
-::: {.callout title="External resources"}
-[EU AI Act (Regulation (EU) 2024/1689) on EUR-Lex](https://eur-lex.europa.eu/eli/reg/2024/1689)
-:::
-
 ### Harmonization with other standards
 
 The EU AI Act requirements overlap with existing model risk management frameworks. Organizations already following SR 11-7, SS1/23, or E-23 can  leverage existing documentation and controls but must also comply with the EU AI Act requirements.
 
 ## 1. Risk management system implementation (Article 9)
 
-**Purpose:** Set up a risk management system in {{< var vm.product >}} to identify, evaluate, and mitigate risks at all stages of the AI system's lifecycle.
+#### Purpose
+Set up a risk management system in the {{< var validmind.platform >}} to identify, evaluate, and mitigate risks at all stages of the AI system's lifecycle.
 
 ### Steps
 
 1. Complete the risk classification questionnaire:
-   - Configure custom inventory fields[^1] to capture EU AI Act risk classification.
+
+   - Configure custom inventory fields[^2] to capture EU AI Act risk classification.
    - Set up fields for prohibited, high-risk, limited-risk, and minimal-risk categories.
 
 2. Map fields to EU AI Act requirements:
+
    - Create custom fields aligned to Article 9 requirements.
    - Document risk assessment criteria and thresholds.
 
-3. Set up custom workflows[^2] for different risk levels:
+3. Set up custom workflows[^3] for different risk levels:
+
    - Configure approval workflows based on risk classification.
    - High-risk systems require additional review gates.
 
 ## 2. Data governance setup (Article 10)
 
-**Purpose:** Implement data quality controls and bias detection to meet Article 10 requirements for training, validation, and testing data.
+#### Purpose
+Implement data quality controls and bias detection to meet Article 10 requirements for training, validation, and testing data.
 
 ### Steps
 
-1. Initialize the {{< var vm.developer >}}:
+1. Initialize the {{< var validmind.developer >}}:[^4]
+
    - Set up the developer environment for data quality testing.
    - Connect to your data sources.
 
-2. Implement out-of-the-box data quality tests:[^3]
+2. Implement out-of-the-box data quality tests:[^5]
+
    - Run automated tests for data completeness, accuracy, and relevance.
    - Document data quality metrics.
 
 3. Create custom tests for your specific data requirements:
+
    - Extend the test framework for domain-specific quality checks.
    - Implement bias detection tests.
 
 4. Centralize governance for oversight:
+
    - Configure dashboards to monitor data quality across systems.
    - Set up alerts for data quality issues.
 
 ## 3. Technical documentation management (Article 11)
 
-**Purpose:** Generate and customize required model documentation to meet Article 11 requirements for technical documentation.
+#### Purpose
+Generate and customize required model documentation to meet Article 11 requirements for technical documentation.
 
 ### Steps
 
-1. Work with documentation templates:[^4]
+1. Work with documentation templates:[^6]
+
    - Select or create templates aligned to EU AI Act requirements.
    - Configure sections for system description, design, and compliance.
 
-2. Discover and use tests:[^5]
+2. Discover and use tests:[^7]
+
    - Map available tests to Article 11 documentation requirements.
    - Run tests to generate evidence
 
 3. Customize sections for specific use cases:
+
    - Add custom sections for AI system-specific requirements.
    - Document intended purpose, design choices, and limitations.
 
 4. Leverage AI-assisted documentation features:
+
    - Use document generation to accelerate documentation.
    - Review and refine AI-generated content.
 
-5. Add content blocks:
+5. Add content blocks:[^8]
+
    - Insert additional evidence and documentation, as needed.
    - Link artifacts to documentation sections.
 
 ## 4. Accuracy and robustness validation (Article 15)
 
-**Purpose:** Validate model accuracy and demonstrate robustness to meet Article 15 requirements.
+#### Purpose
+Validate model accuracy and demonstrate robustness to meet Article 15 requirements.
 
 ### Steps
 
-1. Prepare validation reports:[^6]
+1. Prepare validation reports:[^9]
+
    - Set up validation report templates
    - Configure validation workflows
 
 2. Link evidence to compliance requirements:
+
    - Map test results to Article 15 requirements
    - Document accuracy metrics and thresholds
 
 3. Create and document challenger models:
+
    - Implement challenger model workflows
    - Compare performance across models
 
-4. Record findings and remediations:[^7]
+4. Record findings and remediations:[^10]
+
    - Track validation findings
    - Document remediation actions
 
 5. Assess compliance:
+
    - Generate compliance summaries
    - Review against Article 15 criteria
 
 ## 5. Transparency implementation (Article 13)
 
-**Purpose:** Set up transparent reporting and decision explanations to meet Article 13 requirements.
+#### Purpose
+Set up transparent reporting and decision explanations to meet Article 13 requirements.
 
 ### Steps
 
-1. Work with analytics[^8] for non-technical stakeholders:
+1. Work with analytics[^11] for non-technical stakeholders:
+
    - Configure dashboards for business users
    - Create accessible summaries of AI system behavior
 
-2. Set up custom dashboards:[^9]
+2. Set up custom dashboards:[^12]
+
    - Build dashboards showing key transparency metrics
    - Include interpretability information
 
 3. Set up decision explanation frameworks:
+
    - Document how AI systems make decisions
    - Implement explainability features
 
 ## 6. Human oversight configuration (Article 14)
 
-**Purpose:** Implement human oversight capabilities to meet Article 14 requirements.
+#### Purpose
+Implement human oversight capabilities to meet Article 14 requirements.
 
 ### Steps
 
-1. Configure ongoing monitoring:[^10]
+1. Configure ongoing monitoring:[^13]
+
    - Set up monitoring workflows
    - Define monitoring metrics and thresholds
 
 2. Set up alerts and thresholds:
+
    - Configure alerts for performance degradation
    - Establish escalation procedures
 
-3. Create human review workflows:[^2]
+3. Create human review workflows:
+
    - Implement review gates for high-risk decisions
    - Document human-in-the-loop processes
 
 4. Document intervention processes:
+
    - Define procedures for human override
    - Track intervention decisions
 
 ## 7. Compliance workflow implementation
 
-**Purpose:** Integrate all components into a complete compliance workflow addressing Articles 43, 60, 61, and 62.
+#### Purpose
+Integrate all components into a complete compliance workflow addressing Articles 43, 60, 61, and 62.
 
 ### Steps
 
 1. Set up the conformity assessment process (Article 43):
-   - Configure end-to-end compliance workflows[^2]
-   - Document conformity assessment procedures
 
-2. Register high-risk systems (Article 60):
+   - Configure end-to-end compliance workflows[^14]
+   - Document conformity assessment procedures[^15]
+
+2. Register high-risk systems (Article 60):[^16]
+
    - Maintain EU database registration information
    - Track registration status
 
-3. Implement post-market monitoring (Article 61):[^10]
+3. Implement post-market monitoring (Article 61):[^17]
+
    - Set up ongoing monitoring for deployed systems
    - Configure incident detection
 
 4. Establish incident reporting procedures (Article 62):
+
    - Define incident reporting workflows
    - Document escalation procedures
 
+
 <!-- FOOTNOTES -->
-[^1]: [Manage model inventory fields](/guide/model-inventory/manage-model-inventory-fields.qmd)
+[^1]:
 
-[^2]: [Configure workflows](/guide/workflows/configure-workflows.qmd)
+   **EUR-Lex:**<br>
+   [EU AI Act (Regulation (EU) 2024/1689)](https://eur-lex.europa.eu/eli/reg/2024/1689)
 
-[^3]: [Run tests and test suites](/developer/model-testing/testing-overview.qmd)
+[^2]: [Manage model inventory fields](/guide/model-inventory/manage-model-inventory-fields.qmd)
 
-[^4]: [Work with document templates](/guide/templates/working-with-document-templates.qmd)
+[^3]: [Configure workflows](/guide/workflows/configure-workflows.qmd)
 
-[^5]: [Test descriptions](/developer/model-testing/test-descriptions.qmd)
+[^4]: [Install and initialize the {{< var validmind.developer >}}](/developer/model-documentation/install-and-initialize-validmind-library.qmd)
 
-[^6]: [Prepare validation reports](/guide/model-validation/preparing-validation-reports.qmd)
+ [^5]:
+[Run tests and test suites](/developer/model-testing/testing-overview.qmd)
 
-[^7]: [Work with artifacts](/guide/model-validation/working-with-artifacts.qmd)
+[^6]: [Work with document templates](/guide/templates/working-with-document-templates.qmd)
 
-[^8]: [Work with analytics](/guide/reporting/working-with-analytics.qmd)
+[^7]: [Test descriptions](/developer/model-testing/test-descriptions.qmd)
 
-[^9]: [Customize your dashboard](/guide/configuration/customize-your-dashboard.qmd)
+[^8]: [Work with content blocks](/guide/model-documentation/work-with-content-blocks.qmd)
 
-[^10]: [Ongoing monitoring](/guide/monitoring/ongoing-monitoring.qmd)
+[^9]: [Prepare validation reports](/guide/model-validation/preparing-validation-reports.qmd)
+
+[^10]: [Work with artifacts](/guide/model-validation/working-with-artifacts.qmd)
+
+[^11]: [Work with analytics](/guide/reporting/working-with-analytics.qmd)
+
+[^12]: [Customize your dashboard](/guide/configuration/customize-your-dashboard.qmd)
+
+[^13]: [Ongoing monitoring](/guide/monitoring/ongoing-monitoring.qmd)
+
+[^14]: [Configure workflows](/guide/workflows/configure-workflows.qmd)
+
+[^15]: [Working with model documentation](/guide/model-documentation/working-with-model-documentation.qmd)
+
+[^16]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd)
+
+[^17]: [Ongoing monitoring](/guide/monitoring/ongoing-monitoring.qmd)
+
