--- a/site/guide/attestation/manage-attestations.qmd
+++ b/site/guide/attestation/manage-attestations.qmd
@@ -75,6 +75,10 @@ Edits to an attestation period will be effective for future occurrences but do n
 
 ## Cancel attestation periods
 
+::: {.callout-important title="Canceling an attestation period is permanent"}
+This action cannot be undone. The history of previous attestation periods is unaffected by this action.
+:::
+
 1. In the left sidebar, click **{{< fa gear >}} Settings**.
 
 2. Under Workspace, select **Attestation Templates** and then click the attestation template to manage.
@@ -85,17 +89,13 @@ Edits to an attestation period will be effective for future occurrences but do n
 
 5. Click **Confirm** to cancel the period.
 
-::: {.callout-important title="Canceling an attestation period is permanent"}
-This action cannot be undone and prevents the attestation period from being triggered in the future. The history of previous attestation periods is unaffected by this action.
-:::
-
 ## View details
 
 View the status and progress of attestation instances for an active attestation period.
 
 To access attestation details:
 
-- From the banner when an attestation period is active, click **View Details**.
+- From the banner when an attestation period is active: Click **View Details**.
 - Under **Attestation Periods**, hover over an attestation period and when **{{< fa ellipsis-vertical >}}** appears, select **{{< fa eye >}} View Details**.
 
 The details view shows:
@@ -105,9 +105,7 @@ The details view shows:
 - **Search** — Filter by group, owner, reviewer, or approver
 - **Attestation table** — Columns for Group, Owner, Reviewer, Approver, Status, and Last Updated
 
-::: {.callout title="Multiple attestations can run in parallel"}
 Each combination of group and owner creates a separate attestation instance. This allows multiple attestations to run simultaneously, with each submitter responsible for their own group's attestation.
-:::
 
 <!-- FOOTNOTES -->
 
