Model risk management edits

--- a/site/about/use-cases/model-risk-management.qmd
+++ b/site/about/use-cases/model-risk-management.qmd
@@ -47,18 +47,23 @@ Change control and remediation
 MRM programs produce documentation that demonstrates sound practices:
 
 - **Model inventories** — Centralized registries of all models and their metadata
+
 - **Model documentation** — Comprehensive documentation of model design, development, and testing
+
 - **Validation reports** — Independent assessments of model performance and limitations
+
 - **Findings** — Issues identified during validation with remediation tracking
+
 - **Monitoring evidence** — Ongoing performance metrics and drift analysis
 
 ## Using {{< var vm.product >}} for MRM
 
 {{< var vm.product >}} supports MRM workflows through a unified platform:
 
+::: {.tc}
 ```{mermaid}
 flowchart TB
-    center((Model Risk<br>Management))
+    center((ValidMind<br>Model Risk Management<br>Platform))
     
     inv((Model<br>Inventory))
     docs((Documentation<br>Automation))
@@ -73,7 +78,17 @@ flowchart TB
     center --- lod
     center --- mon
     center --- life
+
+    %% styling
+    classDef centerNode fill:#ffffff,stroke:#de257e,stroke-width:2px,color:#de257e,text-align:center
+    class center centerNode
 ```
+
+:::
+
+:::: {.columns}
+
+::: {.column width="50%" .pr3}
 
 Model inventory
 : Track all models with customizable fields for materiality, tiering, and risk rating.
@@ -83,6 +98,9 @@ Documentation automation
 
 Validation workflows
 : Configure independent validation processes with findings tracking.
+:::
+
+::: {.column width="50%" .pl3}
 
 Three lines of defense
 : Support role separation for developers, validators, and auditors.
@@ -93,6 +111,10 @@ Ongoing monitoring
 Lifecycle
 : Govern model development, deployment, monitoring, and retirement stages.
 
+:::
+
+::::
+
 ## Regulatory frameworks
 
 {{< var vm.product >}} is designed to help organizations comply with MRM regulatory requirements:
@@ -101,13 +123,13 @@ Lifecycle
 
 :::: {.columns}
 
-::: {.column width="50%" .pr3}
+::: {.column width="70%" .pr3}
 
 The Supervisory Guidance on model risk management was issued by the Board of Governors of the Federal Reserve System and the Office of the Comptroller of the Currency. It provides comprehensive guidance on designing and maintaining a robust MRM framework.
 
 :::
 
-::: {.column width="50%" .pl3}
+::: {.column width="30%" .pl3}
 
 [SR 11-7 implementation guide](sr-11-7.qmd){.button}
 
@@ -119,13 +141,13 @@ The Supervisory Guidance on model risk management was issued by the Board of Gov
 
 :::: {.columns}
 
-::: {.column width="50%" .pr3}
+::: {.column width="70%" .pr3}
 
 The Model Risk Management Principles for Banks, issued by the Prudential Regulation Authority (PRA), set out comprehensive expectations for managing model risk in UK banks. The principles emphasize governance, strategic planning, model development, validation, and robust technical capabilities.
 
 :::
 
-::: {.column width="50%" .pl3}
+::: {.column width="30%" .pl3}
 
 [SS1/23 implementation guide](ss1-23.qmd){.button}
 
@@ -137,13 +159,13 @@ The Model Risk Management Principles for Banks, issued by the Prudential Regulat
 
 :::: {.columns}
 
-::: {.column width="50%" .pr3}
+::: {.column width="70%" .pr3}
 
 The Office of the Superintendent of Financial Institutions (OSFI) issued the Guideline on Enterprise-Wide Model Risk Management (E-23) for Deposit-Taking Institutions in Canada. E-23 sets out prudent practices for model development, validation, approval, use, and ongoing change management, including considerations for AI and machine learning models.
 
 :::
 
-::: {.column width="50%" .pl3}
+::: {.column width="30%" .pl3}
 
 [E-23 implementation guide](e-23.qmd){.button}
 
