Library and platform edits

--- a/site/about/overview-model-documentation.qmd
+++ b/site/about/overview-model-documentation.qmd
@@ -7,13 +7,18 @@ listing:
   id: quickstart
   type: grid
   grid-columns: 2
-  # image-height: 100%
   contents:
     - path: ../get-started/get-started.qmd
-      title: "Get started"
+      title: "Get started with {{< var vm.product >}}"
       description: "Our quickstarts are the quickest and easiest way to try out our product features."
-  fields: [title, description, reading-time]
+    - path: ../developer/validmind-library.qmd
+# INVISIBLE SPACE REQUIRED TO ENSURE THAT THE DESCRIPTION DOESN'T HAVE EXTRA PADDING DUE TO THE VARIABLE
+      title: "{{< var validmind.developer >}}&#8203;"
+      description: "The {{< var validmind.developer >}} streamlines model development and validation by automating testing."
+  fields: [title, description]
 ---
+
+
 
 The {{< var validmind.developer >}} streamlines the process of documenting various types of models. {{< var vm.product >}} automates the documentation process, ensuring that your model documentation and testing aligns with regulatory and compliance standards.
 
