--- a/site/get-started/get-started.qmd
+++ b/site/get-started/get-started.qmd
@@ -36,7 +36,7 @@ listing:
     fields: [title, description]
 ---
 
-Our [quickstarts](/get-started/get-started.qmd) are the quickest and easiest ways to try out our product features.
+Our quickstarts are the quickest and easiest ways to try out our product features.
 
 :::{#quickstart}
 :::
