Undo file rename & move images

--- a/site/guide/shared/select-your-filters.qmd
+++ b/site/guide/shared/select-your-filters.qmd
@@ -1,8 +1,6 @@
 ---
-title: "Work with filters"
+title: "Select your filters"
 date: last-modified
-aliases: 
-  - select-your-filters.html
 includes:
     both: true
 # NR This page exists only to provide a page we can link to from the filter modal in the product.
@@ -11,4 +9,4 @@ includes:
 # - /guide/model-validation/view-filter-artifacts.qmd
 ---
 
-{{< include /guide/shared/_work-with-filters.qmd >}}
+{{< include /guide/shared/_select-your-filters.qmd >}}
