--- a/site/guide/shared/work-with-filters.qmd
+++ b/site/guide/shared/work-with-filters.qmd
@@ -1,8 +1,10 @@
 ---
-title: "Select your filters"
+title: "Work with filters"
 date: last-modified
 includes:
     both: true
+aliases: 
+  - select-your-filters.html
 # NR This page exists only to provide a page we can link to from the filter modal in the product.
 # The page is intentionally not included in the sidebar because the docs for the filter modal are already embedded in the correct context:
 # - /guide/model-inventory/working-with-model-inventory.qmd
