Improve owner + group explanations

--- a/site/guide/attestation/_attestations.qmd
+++ b/site/guide/attestation/_attestations.qmd
@@ -1,1 +1,1 @@
-Attestation enables model owners and validators to formally certify, review, and sign off on model attributes at specific points in time, supporting compliance and governance processes. 
+Attestation enables submitters, reviewers, and approvers to formally certify, review, and sign off on model attributes at specific points in time, supporting compliance and governance processes. 
