--- a/site/guide/attestation/_configure-attestations.qmd
+++ b/site/guide/attestation/_configure-attestations.qmd
@@ -53,12 +53,13 @@ Assign users and roles responsible for this attestation. Each participant type h
 
 ### Stakeholder versus role
 
-- **Submitter** — Must be a model stakeholder (assigned directly to a model)
-- **Reviewer/Approver** — Can be a model stakeholder (bottoms-up management) or a role (top-down management)
+- **Submitter** — A model stakeholder assigned directly to a model
+- **Reviewer** — A role responsible for reviewing attestations within their assigned groups
+- **Approver** — A role responsible for approving attestations within their assigned groups
 
 ___
 
-When reviewers or approvers are assigned by role, they can only act on models within groups they belong to — resulting in one attestation submission per model owner per group.
+Attestation submissions are organized by owner and group. This approach ensures reviewers and approvers have appropriate permissions for models in their groups.
 :::
 
 a. Under Attestation Participants, select the **[submitter]{.smallcaps}** from the model stakeholders dropdown:
@@ -67,9 +68,9 @@ a. Under Attestation Participants, select the **[submitter]{.smallcaps}** from t
    - Model Developer
    - Model Validator
 
-b. Select the **[reviewer]{.smallcaps}** from the model stakeholders or roles dropdown.
+b. Select the **[reviewer]{.smallcaps}** from the roles dropdown.
 
-c. Select the **[approver]{.smallcaps}** from the model stakeholders or roles dropdown.
+c. Select the **[approver]{.smallcaps}** from the roles dropdown.
 
 d. Click **Save**.
 
@@ -148,9 +149,9 @@ a. Click **Add Period**.
 
 a. Under Attestation Participants, select the **[submitter]{.smallcaps}** from the model stakeholders dropdown.
 
-a. Select the **[reviewer]{.smallcaps}** from the model stakeholders or roles dropdown.
+a. Select the **[reviewer]{.smallcaps}** from the roles dropdown.
 
-a. Select the **[approver]{.smallcaps}** from the model stakeholders or roles dropdown.
+a. Select the **[approver]{.smallcaps}** from the roles dropdown.
 
 a. Click **Save**.
 
