--- a/site/guide/attestation/working-with-attestations.qmd
+++ b/site/guide/attestation/working-with-attestations.qmd
@@ -4,6 +4,7 @@ date: last-modified
 listing:
   - id: attestation-listing
     type: grid
+    grid-columns: 2
     max-description-length: 250
     sort: false
     fields: [title, description]
@@ -72,9 +73,44 @@ ___
 The platform maintains a history of all status changes and notes.
 :::
 
-The submitter is responsible for completing the questionnaire and addressing change requests. The reviewer is responsible for reviewing the questionnaire and requesting any necessary changes. The approver is responsible for signing off on the questionnaire.
+
+::: {.columns}
+:::: {.column width="30%" .pr1}
+Submitter  
+: Completes the attestation questionnaire and addresses any requested changes.
+::::
+
+:::: {.column width="30%" .pl2 .pr2}
+Reviewer  
+: Reviews the questionnaire and may request further changes if needed.
+::::
+
+:::: {.column width="30%" .pl3}
+Approver  
+: Signs off to finalize and complete the attestation process.
+::::
+:::
 
 Plan your attestation periods ahead of time to ensure they can be completed on time. The start date must be today or a future date, and you cannot set a date in the past to trigger attestation retroactively.
+
+### How are attestation submissions organized?
+
+Attestation submissions are organized by owner AND group. This structure supports organizations where:
+
+- Model owners may own models across multiple groups, such as Fraud and Know-Your-Customer (KYC).
+- Each group has its own validation and governance team
+- Reviewers and approvers are roles scoped to specific groups
+
+::: {.callout title="Example scenario"}
+Steven owns 10 models: 4 in the Fraud group and 6 in the KYC group. Emma is the Governance Lead for Fraud, and Fernanda is the Governance Lead for KYC.
+
+If attestations were organized by owner alone, neither Emma nor Fernanda would have permissions to see all of Steven's models. With owner+group organization:
+
+- Steven submits Attestation #1 for his 4 Fraud models → Emma approves
+- Steven submits Attestation #2 for his 6 KYC models → Fernanda approves
+
+This approach ensures 100% accountability per group, where Emma approves all Fraud models and Fernanda approves all KYC models. If Fraud has two co-leads (Emma and Andres), either can approve.
+:::
 
 ## How do I create meaningful attestation questionnaires?
 
