Remove column experiment

--- a/site/guide/attestation/working-with-attestations.qmd
+++ b/site/guide/attestation/working-with-attestations.qmd
@@ -65,31 +65,7 @@ graph LR
 [The attestation process — Submitter, reviewer, and approver responsibilities]{.silver .small}
 :::
 
-::: {.column-margin .callout title="Attestation is collaborative"}
-A reviewer can request changes from the submitter by rejecting the attestation questionnaire. 
-
-___
-
-The platform maintains a history of all status changes and notes.
-:::
-
-
-::: {.columns}
-:::: {.column width="30%" .pr1}
-Submitter  
-: Completes the attestation questionnaire and addresses any requested changes.
-::::
-
-:::: {.column width="30%" .pl2 .pr2}
-Reviewer  
-: Reviews the questionnaire and may request further changes if needed.
-::::
-
-:::: {.column width="30%" .pl3}
-Approver  
-: Signs off to finalize and complete the attestation process.
-::::
-:::
+The submitter is responsible for completing the questionnaire and addressing change requests. The reviewer is responsible for reviewing the questionnaire and requesting any necessary changes. The approver is responsible for signing off on the questionnaire.
 
 Plan your attestation periods ahead of time to ensure they can be completed on time. The start date must be today or a future date, and you cannot set a date in the past to trigger attestation retroactively.
 
