--- a/site/guide/attestation/approve-attestations.qmd
+++ b/site/guide/attestation/approve-attestations.qmd
@@ -1,5 +1,5 @@
 ---
-title: "Approve attestation questionnaires"
+title: "Approve attestations"
 date: last-modified
 ---
 
@@ -39,6 +39,6 @@ After you sign off, the attestation is recorded in the model's history. Attestat
 
 [^2]: [Manage attestations](/guide/attestation/manage-attestations.qmd)
 
-[^3]: [Review attestation questionnaires](/guide/attestation/review-attestation-questionnaires.qmd)
+[^3]: [Review attestations](/guide/attestation/review-attestations.qmd)
 
 [^4]: [Manage permissions](/guide/configuration/manage-permissions.qmd)
