--- a/site/guide/attestation/manage-attestations.qmd
+++ b/site/guide/attestation/manage-attestations.qmd
@@ -93,6 +93,10 @@ This action cannot be undone. The history of previous attestation periods is una
 
 View the status and progress of attestation instances for an active attestation period.
 
+::: {.column-margin}
+![Attestation details view](attestations-view-details.png){fig-alt="Attestation details view" .screenshot}
+:::
+
 To access attestation details:
 
 - From the banner when an attestation period is active: Click **View Details**.
