--- a/site/guide/attestation/review-attestations.qmd
+++ b/site/guide/attestation/review-attestations.qmd
@@ -1,5 +1,5 @@
 ---
-title: "Review attestation questionnaires"
+title: "Review attestations"
 date: last-modified
 ---
 
@@ -63,8 +63,8 @@ After you accept the questionnaire, it is sent to the approver for final sign-of
 
 [^2]: [Manage attestations](/guide/attestation/manage-attestations.qmd)
 
-[^3]: [Submit attestation questionnaires](/guide/attestation/submit-attestation-questionnaires.qmd)
+[^3]: [Submit attestations](/guide/attestation/submit-attestations.qmd)
 
 [^4]: [Manage permissions](/guide/configuration/manage-permissions.qmd)
 
-[^5]: [Approve attestation questionnaires](/guide/attestation/approve-attestation-questionnaires.qmd)
+[^5]: [Approve attestations](/guide/attestation/approve-attestations.qmd)
