--- a/site/guide/attestation/working-with-attestations.qmd
+++ b/site/guide/attestation/working-with-attestations.qmd
@@ -10,9 +10,9 @@ listing:
     fields: [title, description]
     contents:
       - manage-attestations.qmd
-      - submit-attestation-questionnaires.qmd
-      - review-attestation-questionnaires.qmd
-      - approve-attestation-questionnaires.qmd
+      - submit-attestations.qmd
+      - review-attestations.qmd
+      - approve-attestations.qmd
 ---
 
 {{< include /guide/attestation/_attestations.qmd >}}
